--- a/index.html
+++ b/index.html
@@ -9,19 +9,23 @@
     />
     <link rel="icon" href="/favicon.ico" />
     <!-- 引入element-plus样式和组件库-->
-    <link
-      rel="stylesheet"
-      href="https://cdn.bootcdn.net/ajax/libs/element-plus/1.0.2-beta.65/theme-chalk/base.css"
-    />
-    <script src="https://cdn.bootcdn.net/ajax/libs/element-plus/1.0.2-beta.65/index.full.js"></script>
+<!--    <link-->
+<!--      rel="stylesheet"-->
+<!--      href="https://cdn.bootcdn.net/ajax/libs/element-plus/1.0.2-beta.65/theme-chalk/base.css"-->
+<!--    />-->
+<!--    <script src="https://cdn.bootcdn.net/ajax/libs/element-plus/1.0.2-beta.65/index.full.js"></script>-->
     <!-- 引入vantui样式文件和JS文件 -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/vant@next/lib/index.css"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/vant@next/lib/vant.min.js"></script>
+<!--    <link-->
+<!--      rel="stylesheet"-->
+<!--      href="https://cdn.jsdelivr.net/npm/vant@next/lib/index.css"-->
+<!--    />-->
+<!--    <script src="https://cdn.jsdelivr.net/npm/vant@next/lib/vant.min.js"></script>-->
     <!-- axios -->
-    <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.21.1/axios.min.js"></script>
+<!--    <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.21.1/axios.min.js"></script>-->
+
+    <!-- Varlet -->
+<!--    <script src="https://cdn.jsdelivr.net/npm/vue@next"></script>-->
+<!--    <script src="https://cdn.jsdelivr.net/npm/@varlet/ui/umd/varlet.js"></script>-->
     <title>Vue3+ts+Vite App</title>
   </head>
   <body>
